--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
   "dependencies": {
     "next": "^9.0.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.2"
+  },
+  "devDependencies": {
+    "@types/node": "^12.6.1",
+    "@types/react": "^16.8.23",
+    "typescript": "^3.5.3",
+    "@zeit/next-css": "^1.0.1",
+    "file-loader": "^3.0.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.0"
   }
 }
